--- a/public/assets/css/argon-dashboard-tailwind.css
+++ b/public/assets/css/argon-dashboard-tailwind.css
@@ -4511,3 +4511,47 @@ h6 {
   border-radius: 50%; /* دایره بودن نقطه */
   background-color: #f97316; /* رنگ نارنجی */
 }
+
+
+/* //////////// */
+
+/* استایل اولیه برای چک‌باکس */
+.custom-checkbox {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+}
+
+.custom-checkbox-input {
+  display: none; /* مخفی کردن چک‌باکس واقعی */
+}
+
+.custom-checkbox-box {
+  width: 20px;
+  height: 20px;
+  border: 2px solid #f97316; /* بردار نارنجی */
+  border-radius: 4px;
+  margin-right: 8px;
+  transition: background-color 0.3s ease, border 0.3s ease;
+  position: relative;
+}
+
+/* حالت زمانی که چک‌باکس تیک خورده */
+.custom-checkbox-input:checked + .custom-checkbox-box {
+  background-color: #f97316; /* پس‌زمینه نارنجی */
+  border-color: #f97316;; /* بردار نارنجی */
+}
+
+/* علامت چک سفید */
+.custom-checkbox-input:checked + .custom-checkbox-box::after {
+  content: '✔'; /* علامت چک */
+  font-size: 12px;
+  color: white;
+  position: absolute;
+  left: 0;
+  bottom: 1px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  line-height: 20px;
+}
